--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -19,9 +19,9 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success" type="submit"[disabled]="!f.valid">add</button>
-            <button class="btn btn-danger" type="submit">delete</button>
-            <button class="btn btn-primary" type="submit">clear</button>
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editmode ? 'update' : 'add'}}</button>
+            <button class="btn btn-danger" type="button"(click)="ondelete()" *ngIf="editmode">delete</button>
+            <button class="btn btn-primary" type="button" (click)="onclear()">clear</button>
           </div>
         </div>
       </div>
