--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,8 +19,8 @@
       manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a style="cursor: pointer;" >to shopping list</a></li>
-        <li><a style="cursor: pointer;">edit recipe</a></li>
+        <li><a style="cursor: pointer;"  >to shopping list</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">edit recipe</a></li>
         <li><a style="cursor: pointer;">delete recipe</a></li>
       </ul>
     </div>
