--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,57 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="submit" class="btn btn-success">Save</button>
+          <button type="button" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image Url</label>
+            <input type="text" id="imagePath" class="form-control"formControlName="imagePath">
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <img src="" class="img-responsive">
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea formControlName="description"type="text" id="description" class="form-control" rows="6"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row" *ngFor="let ingredientCtrl of controls; let i = index"
+            [formGroupName]="i">
+            <div class="col-xs-8">
+              <input
+                formControlName="name"
+                type="text" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <input
+                formControlName="amount"
+                type="number" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-danger">X</button>
+            </div>
+
+          </div>
+
+
+      </div>
+  </form>
+</div>
