--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,9 +4,11 @@
     <app-shopping-edit></app-shopping-edit>
       <hr>
       <ul class="list-group">
-        <a *ngFor="let ingredient of ingredients"
+        <a *ngFor="let ingredient of ingredients; let i = index"
         class="list-group-item"
-        style="cursor: pointer;">
+        style="cursor: pointer;"
+        (click)="onEditItem(i)"
+        >
         {{ingredient.name}} {{ingredient.amount}}
         </a>
       </ul>
