--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
       <ul class="dropdown-menu">
         <li><a style="cursor: pointer;"  >to shopping list</a></li>
         <li><a style="cursor: pointer;" (click)="onEditRecipe()">edit recipe</a></li>
-        <li><a style="cursor: pointer;">delete recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onDelete()">delete recipe</a></li>
       </ul>
     </div>
   </div>
