--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,10 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button
+            [disabled]="!recipeForm.valid"
+            type="submit" class="btn btn-success">Save</button>
+          <button (click)="oncancel()" type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -17,12 +19,12 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image Url</label>
-            <input type="text" id="imagePath" class="form-control"formControlName="imagePath">
+            <input type="text" id="imagePath" class="form-control"formControlName="imagePath" #imagePath>
           </div>
         </div>
       </div>
       <div class="form-group">
-        <img src="" class="img-responsive">
+        <img [src]="imagePath.value" class="img-responsive">
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -32,26 +34,42 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row" *ngFor="let ingredientCtrl of controls; let i = index"
-            [formGroupName]="i">
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div
+            class="row"
+            *ngFor="let ingredientCtrl of controls; let i = index"
+            [formGroupName]="i"
+            style="margin-top: 10px;">
             <div class="col-xs-8">
               <input
-                formControlName="name"
-                type="text" class="form-control">
+                type="text"
+                class="form-control"
+                formControlName="name">
             </div>
             <div class="col-xs-2">
               <input
-                formControlName="amount"
-                type="number" class="form-control">
+                type="number"
+                class="form-control"
+                formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)">X</button>
             </div>
-
           </div>
-
-
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="onAddIngredient()">Add Ingredient</button>
+            </div>
+          </div>
+        </div>
       </div>
   </form>
 </div>
